# crazy-days-and-nights-lawsuit-public

./: LICENSE  README.md  app.py  barchart.py  citation.py  database.py  pyproject.toml  python-file.py  requirements.txt
static/: navigation.css  theme.css
static/data/: data.css
static/lawsuit/: lawsuit.css
static/post/: poststyle.css
static/root/: card.css  index.css  pagination.css  readmore.js
static/yougov/: yougov.css
templates/: meta.html
templates/data/: barchart.html  barchart_toggle.html  data.html
templates/lawsuit/: 01_introduction.html  02_jurisdiction.html  03_specific_allegations.html  04_truth_as_a_defense.html  05_public_figure_status.html  06_damages.html  07_anonymity.html  08_source_of_revenue.html  09_prior_legal_actions.html  10_internet_law_issues.html  11_public_opinion.html  12_conclusion.html  13_disclaimer.html  14_citations.html  lawsuit.html
templates/navigation_bar/: navbar.html
templates/post/: post.html  postdata.html
templates/root/: index.html
templates/root/card_format/: card.html  readmore.html
templates/root/pagination/: pagination.html  resubmit.html
templates/yougov/: chart-disclaimer.html  gender-barchart.html  gender-table.html  table-analysis.html  text.html  yougov.html
