[tool.poetry]
name = "repl_nix_crazy-days-and-nights-lawsuit-public"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.13"
Flask = "^2.3.2"
pandas = "^2.0.1"
pymysql = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
